# Yeaster

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: AGENTS.md
docs/technical/: README.md  architecture.md  configuration.md  operations.md  overview.md  x402.md
scripts/: backtest.py  buy_alpha.py  live_entry.py  live_tick.py  paper_cycle.py  testnet_rehearsal.py
skills/: README.md  bracket_planner.md  conviction_grader.md  manifest.json  momentum_screener.md  risk_sizer.md  trap_vetter.md
tests/: test_backtest.py  test_brain.py  test_chat_manual.py  test_controls.py  test_execution_proof.py  test_guard.py  test_runtime.py  test_runtime_exits.py  test_skills.py  test_x402_alpha.py
web/: package-lock.json  package.json
yeaster/: __init__.py
yeaster/api/: __init__.py  app.py
yeaster/backtest/: __init__.py  data.py  engine.py  exits.py  metrics.py  report.py  snapshot.py  sweep.py
yeaster/brain/: __init__.py  alpha.py  chat.py  commit.py  cycle.py  dimensions.py  grade.py  llm.py  screen.py  vet.py
yeaster/core/: __init__.py  addresses.py  models.py  preset.py  settings.py  universe.py  whitelist.json
yeaster/execution/: __init__.py  approval.py  brackets.py  models.py  twak.py  x402.py
yeaster/guard/: __init__.py  firewall.py  token_safety.py
yeaster/market/: __init__.py  cmc.py  indicators.py  models.py  skills.py
yeaster/proof/: __init__.py  ledger.py
yeaster/runtime/: __init__.py  atr_provider.py  daemon.py  exits.py  flatten.py  state.py  tick.py
yeaster/skills/: __init__.py  base.py  catalog.py
(+22 files in other folders)
