[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yeaster"
version = "0.1.0"
description = "Yeaster — an autonomous BNB momentum trading agent with an orchestrated, single-mind brain."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["yeaster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
